--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,91 @@
+# JUCE generated content
+*[Bb]uilds
+JuceLibraryCode/*
+
+# We're going to leave this file from JUCE so as to avoid accidentally
+# deleting anything from the user code section.
+!thedarkfable/JuceLibraryCode/AppConfig.h
+
+# Documentation Stuff
+
+documentation/doxygen/docs
+
 # Prerequisites
+
 *.d
 
-# Compiled Object files
+# Compiled object files
+
 *.slo
 *.lo
 *.o
 *.obj
 
-# Precompiled Headers
+# Precompiled headers
+
 *.gch
 *.pch
 
-# Compiled Dynamic libraries
+# Compiled dynamic libraries
+
 *.so
 *.dylib
 *.dll
 
-# Fortran module files
-*.mod
-*.smod
+# Compiled static libraries
 
-# Compiled Static libraries
 *.lai
 *.la
 *.a
 *.lib
 
 # Executables
+
 *.exe
 *.out
 *.app
+
+# Windows temp cache Files
+
+[Tt]humbs.db
+
+# macOS Finder and whatnot
+
+.DS_Store
+*.DS_Store
+*.swp
+*~
+
+# IDE stuff
+
+.vscode
+*.vs
+*.pdb
+*.tlog
+*.lastbuildstate
+*.log
+*.recipe
+
+# Fortran module files
+
+*.mod
+*.smod
+
+# Other source repository archive directories (protects when importing)
+
+.hg
+.svn
+CVS
+
+# Various other file types
+
+*.pkg
+*.zip
+*.exe
+*.app
+*.msi
+*.vst3
+*.component
+*.vst
+*.aax
+*.aaxplugin
